# Workbench-Screens

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  App.h  flags.h  main.cpp
src/core/: DataRegistry.cpp  DataRegistry.h  Module.h  ModuleContext.h  PluginManager.cpp  PluginManager.h  Types.h
src/hardware/: HardwareServiceClient.cpp  HardwareServiceClient.h  README.md  TeensyLink.cpp  TeensyLink.h  TeensyProtocol.cpp  TeensyProtocol.h
src/modules/: DemoModule.cpp  DemoModule.h  GraphingDataModule.cpp  GraphingDataModule.h  NumericDataModule.cpp  NumericDataModule.h
src/ui/: Dashboard.cpp  Dashboard.h  WindowSpec.h
